--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "generator"
   ],
   "dependencies": {
-    "handlebars": "^2.0.0"
+    "handlebars": "^2.0.0",
+    "tv4": "^1.1.5",
+    "tv4-formats": "^0.5.1"
   },
   "devDependencies": {}
 }
