--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "email": "deyhle@entrecode.de",
     "url": "https://entrecode.de"
   },
-  "repository": "entrecode/hypermediadoc",
+  "repository": "entrecode/node-hypermediadoc",
   "license": "MIT",
-  "files": [
-    "index.js"
-  ],
   "keywords": [
     "hypermediadoc",
     "node",
