--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
   ],
   "dependencies": {
     "handlebars": "^2.0.0",
+    "lodash": "^3.0.0",
     "marked": "^0.3.3",
     "tv4": "^1.1.9",
     "tv4-formats": "^1.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "json-schema-remote": "0.0.2"
+  }
 }
