--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   ],
   "dependencies": {
     "handlebars": "^2.0.0",
-    "lodash": "^3.0.0",
-    "marked": "^0.3.3",
+    "lodash": "^3.1.0",
+    "markdown-it": "^3.0.4",
     "tv4": "^1.1.9",
     "tv4-formats": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
-    "json-schema-remote": "0.0.2"
+    "json-schema-remote": "0.1.0",
+    "mocha": "^2.1.0"
   }
 }
