--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "chai": "^3.0.0",
     "json-schema-remote": "0.1.3",
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "mocha-bamboo-reporter": "^1.1.0"
   }
 }
