--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hypermediadoc",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Node.js module to generate markdown documentation for Hypermedia APIs.",
   "homepage": "https://github.com/entrecode/node-hypermediadoc",
   "author": {
@@ -21,16 +21,16 @@
     "generator"
   ],
   "dependencies": {
-    "handlebars": "^4.0.4",
+    "handlebars": "^4.0.5",
     "lodash": "^3.3.1",
-    "markdown-it": "^5.0.1",
+    "markdown-it": "^5.0.2",
     "tv4": "^1.2.7",
     "tv4-formats": "^1.0.2"
   },
   "devDependencies": {
-    "chai": "^3.4.0",
-    "json-schema-remote": "0.1.3",
-    "mocha": "^2.3.3",
+    "chai": "^3.4.1",
+    "json-schema-remote": "^0.1.5",
+    "mocha": "^2.3.4",
     "mocha-bamboo-reporter": "^1.1.0"
   }
 }
