--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "hypermediadoc",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Node.js module to generate markdown documentation for Hypermedia APIs.",
   "homepage": "https://github.com/entrecode/node-hypermediadoc",
   "author": {
     "name": "Ruben Deyhle",
     "email": "deyhle@entrecode.de",
     "url": "https://entrecode.de"
+  },
+  "scripts": {
+    "test": "mocha -R spec"
   },
   "repository": "entrecode/node-hypermediadoc",
   "license": "MIT",
@@ -22,15 +25,15 @@
   ],
   "dependencies": {
     "handlebars": "^4.0.5",
-    "lodash": "^4.3.0",
-    "markdown-it": "^6.0.0",
+    "lodash": "^4.15.0",
+    "markdown-it": "^7.0.1",
     "tv4": "^1.2.7",
-    "tv4-formats": "^1.0.2"
+    "tv4-formats": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "json-schema-remote": "^0.1.6",
-    "mocha": "^2.4.5",
+    "json-schema-remote": "^1.1.1",
+    "mocha": "^3.0.2",
     "mocha-bamboo-reporter": "^1.1.0"
   }
 }
